<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Alteh Union (alteh.union@gmail.com)
  ~
  ~ Licensed under the MIT License (see the root LICENSE file for details)
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_item_margin_top" >

        <androidx.cardview.widget.CardView
            android:id="@+id/orgImageCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/grid_item_elevation"
            app:cardCornerRadius="@dimen/half_org_selection_image_size"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/orgName" >

            <ImageView
                android:id="@+id/orgImage"
                android:layout_width="@dimen/org_selection_image_size"
                android:layout_height="@dimen/org_selection_image_size"
                android:src="@drawable/ic_discord"
                android:contentDescription="@string/org_icon_description" />

            <ImageView
                android:id="@+id/orgAcronymBackground"
                android:layout_width="@dimen/org_selection_image_size"
                android:layout_height="@dimen/org_selection_image_size"
                android:src="@drawable/background_circle"
                android:contentDescription="@string/org_acronym_description"
                android:visibility="gone"
                app:tint="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/orgAcronym"
                android:layout_width="@dimen/org_selection_image_size"
                android:layout_height="@dimen/org_selection_image_size"
                android:gravity="center"
                android:textSize="@dimen/org_selection_acronym_size"
                android:textColor="@android:color/white"
                android:text="@string/org_default_acronym"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/orgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_org_name"
            android:textSize="@dimen/source_selection_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>