<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Alteh Union (alteh.union@gmail.com)
  ~
  ~ Licensed under the MIT License (see the root LICENSE file for details)
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_item_margin_top" >

        <androidx.cardview.widget.CardView
            android:id="@+id/moduleImageCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/grid_item_elevation"
            app:cardCornerRadius="@dimen/half_module_selection_image_size"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/moduleName" >

            <ImageView
                android:id="@+id/moduleImageBackground"
                android:layout_width="@dimen/module_selection_background_size"
                android:layout_height="@dimen/module_selection_background_size"
                android:gravity="center"
                android:src="@drawable/background_circle"
                android:contentDescription="@string/org_acronym_description"
                app:tint="?attr/colorPrimaryDark"/>

            <ImageView
                android:id="@+id/moduleImage"
                android:layout_width="@dimen/module_selection_image_size"
                android:layout_height="@dimen/module_selection_image_size"
                android:layout_gravity="center"
                android:src="@drawable/ic_discord"
                android:contentDescription="@string/module_icon_description" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/moduleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_module_name"
            android:textSize="@dimen/source_selection_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>