<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Alteh Union (alteh.union@gmail.com)
  ~
  ~ Licensed under the MIT License (see the root LICENSE file for details)
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/command_margin_side"
        android:layout_marginEnd="@dimen/command_margin_side"
        android:layout_marginTop="@dimen/command_margin_top">

        <TextView
            android:id="@+id/commandTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/command_title"
            android:textSize="@dimen/command_title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commandHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/command_help"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commandTitle" />

        <LinearLayout
            android:id="@+id/argumentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commandHelp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/commandResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/command_result"
            android:textStyle="bold"
            android:paddingTop="@dimen/command_result_padding_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/argumentContainer" />

        <LinearLayout
            android:id="@+id/resultAttachmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commandResult"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/executeCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/execute_button_margin_top"
            android:layout_marginEnd="@dimen/argument_padding"
            android:text="@string/execute"
            android:textColor="?attr/colorOnPrimary"
            android:elevation="@dimen/button_elevation"
            app:backgroundTint="?attr/colorPrimary"
            app:strokeWidth="@dimen/large_button_stroke_width"
            app:strokeColor="?attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultAttachmentContainer" />

        <View
            android:id="@+id/command_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width"
            android:layout_marginTop="@dimen/execute_button_margin_top"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/executeCommand"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>